// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useCanvasLayout > should layout a basic workflow 1`] = `
{
  "boundingBox": {
    "height": 100,
    "width": 540,
    "x": 0,
    "y": 0,
  },
  "nodes": [
    {
      "id": "node1",
      "x": 100,
      "y": 100,
    },
    {
      "id": "node2",
      "x": 320,
      "y": 100,
    },
    {
      "id": "node3",
      "x": 540,
      "y": 100,
    },
  ],
}
`;

exports[`useCanvasLayout > should layout a basic workflow with selected nodes 1`] = `
{
  "boundingBox": {
    "height": 100,
    "width": 540,
    "x": 0,
    "y": 0,
  },
  "nodes": [
    {
      "id": "node1",
      "x": 100,
      "y": 100,
    },
    {
      "id": "node2",
      "x": 320,
      "y": 100,
    },
    {
      "id": "node3",
      "x": 540,
      "y": 100,
    },
  ],
}
`;

exports[`useCanvasLayout > should layout a workflow with AI nodes 1`] = `
{
  "boundingBox": {
    "height": 540,
    "width": 820,
    "x": 0,
    "y": 220,
  },
  "nodes": [
    {
      "id": "node1",
      "x": 100,
      "y": 100,
    },
    {
      "id": "aiTool1",
      "x": 320,
      "y": 320,
    },
    {
      "id": "aiTool2",
      "x": 460,
      "y": 320,
    },
    {
      "id": "aiTool3",
      "x": 600,
      "y": 540,
    },
    {
      "id": "aiAgent",
      "x": 460,
      "y": 100,
    },
    {
      "id": "configurableAiTool",
      "x": 600,
      "y": 320,
    },
    {
      "id": "node2",
      "x": 820,
      "y": 100,
    },
  ],
}
`;

exports[`useCanvasLayout > should layout a workflow with sticky notes 1`] = `
{
  "boundingBox": {
    "height": 100,
    "width": 760,
    "x": 0,
    "y": 0,
  },
  "nodes": [
    {
      "id": "node1",
      "x": 0,
      "y": 0,
    },
    {
      "id": "node2",
      "x": 220,
      "y": 0,
    },
    {
      "id": "node3",
      "x": 440,
      "y": 0,
    },
    {
      "id": "node4",
      "x": 660,
      "y": 0,
    },
    {
      "id": "sticky",
      "x": 130,
      "y": -240,
    },
  ],
}
`;

exports[`useCanvasLayout > should not reorder nodes vertically as it affects execution order 1`] = `
{
  "boundingBox": {
    "height": 300,
    "width": 320,
    "x": 0,
    "y": 0,
  },
  "nodes": [
    {
      "id": "node1",
      "x": 0,
      "y": -100,
    },
    {
      "id": "node3",
      "x": 220,
      "y": -200,
    },
    {
      "id": "node2",
      "x": 220,
      "y": 0,
    },
  ],
}
`;
